@@ -38,35 +38,35 @@
 
 CB_FLAG_RQ (cb_stack_size, 0, "stack-size", 255, 1,
 	_("  -fstack-size=<number>\tdefine PERFORM stack size\n"
-	  "                       - default: 255"))
+	  "                       * default: 255"))
 
 #ifdef COBC_HAS_CUTOFF_FLAG	/* CHECKME: likely will be removed completely in 3.1 */
 CB_FLAG_RQ (cb_if_cutoff, 0, "if-cutoff", 3, 2,
 	_("  -fif-cutoff=<number>  define cutoff depth for IF statements\n"
-	  "                        - default: 3"))
+	  "                        * default: 3"))
 #endif
 
 CB_FLAG_RQ (cb_ebcdic_sign, 1, "sign", 0, 3,
 	_("  -fsign=[ASCII|EBCDIC]\tdefine display sign representation\n"
-	  "                        - default: machine native"))
+	  "                        * default: machine native"))
 
 CB_FLAG_RQ (cb_fold_copy, 1, "fold-copy", 0, 4,
 	_("  -ffold-copy=[UPPER|LOWER]\tfold COPY subject to value\n"
-	  "                        - default: no transformation"))
+	  "                        * default: no transformation"))
 
 CB_FLAG_RQ (cb_fold_call, 1, "fold-call", 0, 5,
 	_("  -ffold-call=[UPPER|LOWER]\tfold PROGRAM-ID, CALL, CANCEL subject to value\n"
-	  "                        - default: no transformation"))
+	  "                        * default: no transformation"))
 
 CB_FLAG_RQ (cb_default_byte, 1, "defaultbyte", -1, 6,
 	_("  -fdefaultbyte=<value>\tinitialize fields without VALUE to value\n"
-	  "                        - decimal 0..255 or any quoted character\n"
-	  "                        - default: initialize to picture"))
+	  "                        * decimal 0..255 or any quoted character\n"
+	  "                        * default: initialize to picture"))
 
 CB_FLAG_RQ (cb_max_errors, 1, "max-errors", 100, 7,
 	_("  -fmax-errors=<number>\tmaximum number of errors to report before\n"
 	  "                        compilation is aborted\n"
-	  "                        - default: 100"))
+	  "                        * default: 100"))
 
 CB_FLAG_RQ (cb_def_dump, 1, "dump", -1, 8,
 	_("  -fdump=<scope>        dump data fields on abort, <scope> may be\n"
@@ -114,38 +114,38 @@ CB_FLAG (cb_flag_stack_on_heap, 0, "stack-on-heap",
 /* Normal flags */
 CB_FLAG (cb_flag_trace, 1, "trace",
 	_("  -ftrace               generate trace code\n"
-	  "                        - executed SECTION/PARAGRAPH"))
+	  "                        * scope: executed SECTION/PARAGRAPH"))
 
 CB_FLAG (cb_flag_traceall, 1, "traceall",
 	_("  -ftraceall            generate trace code\n"
-	  "                        - executed SECTION/PARAGRAPH/STATEMENTS\n"
-	  "                        - turned on by -debug"))
+	  "                        * scope: executed SECTION/PARAGRAPH/STATEMENTS\n"
+	  "                        * turned on by -debug"))
 
 CB_FLAG (cb_flag_syntax_only, 1, "syntax-only",
 	_("  -fsyntax-only         syntax error checking only; don't emit any output"))
 
 CB_FLAG (cb_flag_debugging_line, 1, "debugging-line",
 	_("  -fdebugging-line      enable debugging lines\n"
-	  "                        - 'D' in indicator column or floating >>D"))
+	  "                        * 'D' in indicator column or floating >>D"))
 
 CB_FLAG (cb_flag_source_location, 1, "source-location",
 	_("  -fsource-location     generate source location code\n"
-	  "                        - turned on by -debug/-g/-ftraceall"))
+	  "                        * turned on by -debug/-g/-ftraceall"))
 
 CB_FLAG (cb_flag_implicit_init, 1, "implicit-init",
 	_("  -fimplicit-init       automatic initialization of the COBOL runtime system"))
 
 CB_FLAG (cb_flag_stack_check, 1, "stack-check",
 	_("  -fstack-check         PERFORM stack checking\n"
-	  "                        - turned on by -debug or -g"))
+	  "                        * turned on by -debug or -g"))
 
 CB_FLAG (cb_flag_write_after, 1, "write-after",
 	_("  -fwrite-after         use AFTER 1 for WRITE of LINE SEQUENTIAL\n"
-	  "                        - default: BEFORE 1"))
+	  "                        * default: BEFORE 1"))
 
 CB_FLAG (cb_flag_mfcomment, 1, "mfcomment",
 	_("  -fmfcomment           '*' or '/' in column 1 treated as comment\n"
-	  "                        - FIXED format only"))
+	  "                        * FIXED format only"))
 
 CB_FLAG (cb_flag_acucomment, 1, "acucomment",
 	_("  -facucomment          '$' in indicator area treated as '*',\n"
@@ -153,30 +153,30 @@ CB_FLAG (cb_flag_acucomment, 1, "acucomment",
 
 CB_FLAG (cb_flag_notrunc, 1, "notrunc",
 	_("  -fnotrunc             allow numeric field overflow\n"
-	  "                        - non-ANSI behaviour"))
+	  "                        * non-ANSI behaviour"))
 
 CB_FLAG (cb_flag_odoslide, 1, "odoslide",
 	_("  -fodoslide            adjust items following OCCURS DEPENDING\n"
-	  "                        - implies -fcomplex-odo"))
+	  "                        * implies -fcomplex-odo"))
 
 CB_FLAG (cb_flag_apostrophe, 1, "single-quote",
 	_("  -fsingle-quote        use a single quote (apostrophe) for QUOTE\n"
-	  "                        - default: double quote"))
+	  "                        * default: double quote"))
 
 #if 0 /* deactivated + untranslated as -frelaxed-syntax (compiler configuration) is available */
 CB_FLAG (cb_flag_relaxed_syntax, 1, "relax-syntax",
 	  "  -frelax-syntax        relax syntax checking\n"
-	  "                        - e.g. REDEFINES position")
+	  "                        * e.g. REDEFINES position")
 #endif
 
 CB_FLAG (cb_flag_optional_file, 1, "optional-file",
 	_("  -foptional-file       treat all files as OPTIONAL\n"
-	  "                        - unless NOT OPTIONAL specified"))
+	  "                        * unless NOT OPTIONAL specified"))
 
 #if 0 /* deactivated + untranslated for now, inspect later */
 CB_FLAG (cb_mf_ibm_comp, 1, "ibmcomp",
 	  "  -fibmcomp              Handle COMP fields like Micro Focus IBMCOMP\n"
-	  "                         - binary-size: 1--8 & synchronized-clause: ignore")
+	  "                         * binary-size: 1--8 & synchronized-clause: ignore")
 #endif
 
 CB_FLAG_ON (cb_listing_with_header, 1, "listing-header",
