@@ -1,5 +1,5 @@
 /*
-   Copyright (C) 2003-2012, 2016-2017 Free Software Foundation, Inc.
+   Copyright (C) 2003-2012, 2016-2018 Free Software Foundation, Inc.
    Written by Keisuke Nishida, Roger While, Simon Sobisch
 
    This file is part of GnuCOBOL.
@@ -40,62 +40,61 @@ CB_WARNDEF (cb_warn_archaic, "archaic",
 	_("  -Warchaic             warn if archaic features are used"))
 
 CB_WARNDEF (cb_warn_redefinition, "redefinition",
-	_("  -Wredefinition        warn incompatible redefinition of data items"))
+	_("  -Wredefinition        warn about incompatible redefinition of data items"))
 
 CB_WARNDEF (cb_warn_truncate, "truncate",
-	_("  -Wtruncate            warn field truncation from constant assignments"))
+	_("  -Wtruncate            warn about field truncation from constant assignments"))
 
 CB_NOWARNDEF (cb_warn_pos_truncate, "possible-truncate",
-	_("  -Wpossible-truncate   warn possible field truncation"))
+	_("  -Wpossible-truncate   warn about possible field truncation"))
 
 CB_WARNDEF (cb_warn_overlap, "overlap",
-	_("  -Woverlap             warn overlapping MOVE items"))
+	_("  -Woverlap             warn about overlapping MOVE of items"))
 
 CB_NOWARNDEF (cb_warn_pos_overlap, "possible-overlap",
-	_("  -Wpossible-overlap    warn MOVE items that may overlap depending on variables"))
+	_("  -Wpossible-overlap    warn about MOVE of items that may overlap depending on variables"))
 
 CB_WARNDEF (cb_warn_parentheses, "parentheses",
-	_("  -Wparentheses         warn lack of parentheses around AND within OR"))
+	_("  -Wparentheses         warn about lack of parentheses around AND within OR"))
 
 CB_WARNDEF (cb_warn_strict_typing, "strict-typing",
-	_("  -Wstrict-typing       warn type mismatch strictly"))
+	_("  -Wstrict-typing       warn strictly about type mismatch"))
 
 CB_WARNDEF (cb_warn_implicit_define, "implicit-define",
-	_("  -Wimplicit-define     warn implicitly defined data items"))
+	_("  -Wimplicit-define     warn about implicitly defined data items"))
 
 CB_WARNDEF (cb_warn_corresponding, "corresponding",
-	_("  -Wcorresponding       warn CORRESPONDING with no matching items"))
+	_("  -Wcorresponding       warn about CORRESPONDING with no matching items"))
 
 CB_WARNDEF (cb_warn_ignored_initial_val, "initial-value",
 	_("  -Winitial-value       warn if initial VALUE clause is ignored"))
 
 CB_WARNDEF (cb_warn_prototypes, "prototypes",
-	_("  -Wprototypes          warn missing FUNCTION prototypes/definitions"))
+	_("  -Wprototypes          warn about missing FUNCTION prototypes/definitions"))
 
 CB_WARNDEF (cb_warn_arithmetic_osvs, "arithmetic-osvs",
 	_("  -Warithmetic-osvs     warn if arithmetic expression precision has changed"))
 
 CB_NOWARNDEF (cb_warn_call_params, "call-params",
-	_("  -Wcall-params         warn non 01/77 items for CALL params"))
+	_("  -Wcall-params         warn about non 01/77 items for CALL parameters"))
 
 CB_WARNDEF (cb_warn_constant_expr, "constant-expression",
-	_("  -Wconstant-expression  warn expressions that always resolve to true/false"))
+	_("  -Wconstant-expression  warn about expressions that always resolve to true/false"))
 
 CB_NOWARNDEF (cb_warn_column_overflow, "column-overflow",
-	_("  -Wcolumn-overflow     warn text after program-text area, FIXED format"))
+	_("  -Wcolumn-overflow     warn about text after program-text area, FIXED format"))
 
 CB_NOWARNDEF (cb_warn_terminator, "terminator",
-	_("  -Wterminator          warn lack of scope terminator END-XXX"))
+	_("  -Wterminator          warn about lack of scope terminator END-XXX"))
 
 CB_NOWARNDEF (cb_warn_linkage, "linkage",
-	_("  -Wlinkage             warn dangling LINKAGE items"))
+	_("  -Wlinkage             warn about dangling LINKAGE items"))
 
 CB_NOWARNDEF (cb_warn_unreachable, "unreachable",
-	_("  -Wunreachable         warn likely unreachable statements"))
+	_("  -Wunreachable         warn about likely unreachable statements"))
 
 CB_ONWARNDEF (cb_warn_dialect, "dialect",
-	_("  -Wno-dialect          do not warn dialect specific issues"))
+	_("  -Wno-dialect          do not warn about dialect specific issues"))
 
 CB_ONWARNDEF (cb_warn_filler, "others",
-	_("  -Wothers              do not warn different issues"))
-
+	_("  -Wothers              do not warn about different issues"))
